Fixed navbar wrapping, altered committee text size

--- a/website/website_app/static/website_app/css/carousel.css
+++ b/website/website_app/static/website_app/css/carousel.css
@@ -17,47 +17,12 @@ body {
 }
 
 .mayball_logo{
-	margin: 0;
+	margin: 0 0 0 20px;
 	padding: 0;
 	padding-right:2px;
 }
 
-@media (max-width: 991px) { /*Collapses the navbar at a larger width than default*/
-  .navbar-header {
-      float: none;
-  }
-  .navbar-left,.navbar-right {
-      float: none !important;
-  }
-  .navbar-toggle {
-      display: block;
-  }
-  .navbar-collapse {
-      border-top: 1px solid transparent;
-      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
-  }
-  .navbar-fixed-top {
-      top: 0;
-      border-width: 0 0 1px;
-  }
-  .navbar-collapse.collapse {
-      display: none!important;
-  }
-  .navbar-nav {
-      float: none!important;
-      margin-top: 7.5px;
-  }
-  .navbar-nav>li {
-      float: none;
-  }
-  .navbar-nav>li>a {
-      padding-top: 10px;
-      padding-bottom: 10px;
-  }
-  .collapse.in{
-      display:block !important;
-  }
-}
+
 
 .navbar-brand > img { 
     margin-top: -5px;
@@ -75,19 +40,14 @@ body {
 }
 
 .navbar-default .navbar-toggle{
-	border-color:#FFFAF0
+	border-color:#FFFAF0;
+	margin-right:20px;
 }
 .navbar-default .navbar-toggle .icon-bar {
   background-color: #3333cc; /* Changes regular toggle color */
 }
 .navbar-default .navbar-toggle .icon-bar:hover {
   background-color: #fff; /* Changes toggle color on hover */
-}
-
-
-@media(max-width: 1000px){
-    .navbar > .container { max-width: 100%; padding: 0; }
-	.navbar-collapse { background:rgba(0,0,0,0.5);} 
 }
 
 .navbar-default
@@ -189,6 +149,7 @@ body {
 
 .com-name{
   margin:0 0 20px 0;
+  font-size:large;
 }
 
 /* MAKING EMBEDDED VIDEO RESPONSIVE */
@@ -237,6 +198,48 @@ input {
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
+@media (max-width: 991px) { /*Collapses the navbar at a larger width than default*/
+  .navbar-header {
+      float: none;
+  }
+  .navbar-left,.navbar-right {
+      float: none !important;
+  }
+  .navbar-toggle {
+      display: block;
+  }
+  .navbar-collapse {
+      border-top: 1px solid transparent;
+      box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
+  }
+  .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+  }
+  .navbar-collapse.collapse {
+      display: none!important;
+  }
+  .navbar-nav {
+      float: none!important;
+      margin-top: 7.5px;
+  }
+  .navbar-nav>li {
+      float: none;
+  }
+  .navbar-nav>li>a {
+      padding-top: 10px;
+      padding-bottom: 10px;
+  }
+  .collapse.in{
+      display:block !important;
+  }
+}
+
+@media(max-width: 1000px){
+    .navbar > .container { max-width: 100%; padding: 0; }
+	.navbar-collapse { background:rgba(0,0,0,0.5); padding-left:20px;} 
+}
+
 @media (min-width: 320px) {
   .row {
     width: 100%;
